--- a/QQWRFO_Mobilprog_Feleves/MainPage.xaml
+++ b/QQWRFO_Mobilprog_Feleves/MainPage.xaml
@@ -4,32 +4,28 @@
              x:Class="QQWRFO_Mobilprog_Feleves.MainPage">
 
     <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a submarine number ten" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+        <VerticalStackLayout>
+        <Grid RowSpacing="20" Padding="30">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Label Text="Username" FontSize="32" HorizontalOptions="Center" Grid.Row="0"/>
+            <Entry Grid.Row="1"/>
+            <Label Text="Password" FontSize="32" HorizontalOptions="Center" Grid.Row="2"/>
+            <Entry Grid.Row="3"/>
+            <Grid Grid.Row="4" ColumnSpacing="20">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Text="Login" Grid.Column="0"/>
+                <Button Text="Register" Grid.Column="1"/>
+            </Grid>
+        </Grid>
         </VerticalStackLayout>
     </ScrollView>
 
