--- a/QQWRFO_Mobilprog_Feleves/RegisterPage.xaml
+++ b/QQWRFO_Mobilprog_Feleves/RegisterPage.xaml
@@ -3,10 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QQWRFO_Mobilprog_Feleves.RegisterPage"
              Title="RegisterPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Label Text="Username" FontSize="32" HorizontalOptions="Center" Grid.Row="0"/>
+        <Entry Grid.Row="1"/>
+        <Label Text="Password" FontSize="32" HorizontalOptions="Center" Grid.Row="2"/>
+        <Entry Grid.Row="3"/>
+        <Label Text="Birdth date" FontSize="32"  HorizontalOptions="Center" Grid.Row="4"/>
+        <DatePicker Grid.Row="5"/>
+        <Grid Grid.Row="6" ColumnSpacing="20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Text="Register" Grid.Column="0"/>
+            <Button Text="Back to Login" Grid.Column="1"/>
+        </Grid>
+    </Grid>
 </ContentPage>
