--- a/QQWRFO_Mobilprog_Feleves/RecordsPage.xaml
+++ b/QQWRFO_Mobilprog_Feleves/RecordsPage.xaml
@@ -3,10 +3,31 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QQWRFO_Mobilprog_Feleves.RecordsPage"
              Title="RecordsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <Grid RowSpacing="20" Padding="30">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <CollectionView x:Name="RecordsList"
+                ItemsSource="{Binding Records}"
+                SelectionMode="None" Grid.Row="0">
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Vertical" />
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Padding="1">
+                        <Label Text="{Binding UserName}" 
+                               FontSize="20"
+                               VerticalOptions="Center"
+                               HorizontalOptions="StartAndExpand"/>
+                        <Label Text="{Binding Score}" 
+                               FontSize="20"
+                               VerticalOptions="Center"
+                               HorizontalOptions="End"/>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </Grid>
 </ContentPage>
