--- a/QQWRFO_Mobilprog_Feleves/GamePage.xaml
+++ b/QQWRFO_Mobilprog_Feleves/GamePage.xaml
@@ -1,79 +1,81 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:QQWRFO_Mobilprog_Feleves"
+             xmlns:local="clr-namespace:QQWRFO_Mobilprog_Feleves"
              x:Class="QQWRFO_Mobilprog_Feleves.GamePage"
-             Title="Tili-Toli Játék">
-
-    <ContentPage.Resources>
-        <ResourceDictionary>
-        </ResourceDictionary>
-    </ContentPage.Resources>
+             Title="GamePage">
 
     <ContentPage.BindingContext>
-        <vm:GameViewModel />
+        <local:GameViewModel />
     </ContentPage.BindingContext>
 
-    <Grid RowDefinitions="Auto, Auto, *" 
-          RowSpacing="10" 
-          Padding="20">
+    <ScrollView>
+        <VerticalStackLayout Spacing="10" Padding="10">
 
-        <Grid Grid.Row="0" ColumnDefinitions="*, *" ColumnSpacing="15">
-            <Button Grid.Column="0" 
-                    Text="Galéria" 
-                    Command="{Binding PickImageCommand}"/>
-            <Button Grid.Column="1" 
-                    Text="Kamera" 
-                    Command="{Binding TakePhotoCommand}"/>
-        </Grid>
+            <Grid ColumnDefinitions="*,*" ColumnSpacing="10" Padding="0, 10, 0, 10">
 
-        <Grid Grid.Row="1" ColumnDefinitions="*, *" ColumnSpacing="15">
-            <Button Grid.Column="0" 
-                    Text="Keverés (Roll)" 
-                    BackgroundColor="Orange"
-                    Command="{Binding ShuffleCommand}"/>
-            <Button Grid.Column="1" 
-                    Text="Eredeti kép" 
-                    Command="{Binding ShowOriginalCommand}"/>
-        </Grid>
+                <Button Text="Válassz képet"
+                        Command="{Binding PickImageCommand}"
+                        Grid.Column="0" />
 
-        <CollectionView x:Name="PuzzleBoard"
-                        Grid.Row="2"
-                        ItemsSource="{Binding PuzzlePieces}"
-                        SelectionMode="None"
-                        Margin="0,20,0,0">
+                <Button Text="Készíts képet"
+                        Command="{Binding TakePhotoCommand}"
+                        Grid.Column="1" />
+            </Grid>
 
-            <CollectionView.ItemsLayout>
-                <GridItemsLayout Orientation="Vertical" 
-                                 Span="3" 
-                                 HorizontalItemSpacing="2" 
-                                 VerticalItemSpacing="2"/>
-            </CollectionView.ItemsLayout>
+            <BoxView HeightRequest="1" Color="LightGray" />
 
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Grid Padding="0">
+            <Image Source="{Binding SelectedImage}" 
+                   Aspect="AspectFit"
+                   HeightRequest="200"
+                   IsVisible="{Binding IsGameStarted, Converter={StaticResource InverseBooleanConverter}}" 
+                   BackgroundColor="Transparent"
+                   Margin="0, 10" />
 
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer 
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type vm:GameViewModel}}, Path=MoveTileCommand}"
-                                CommandParameter="{Binding .}" />
-                        </Grid.GestureRecognizers>
+            <BoxView HeightRequest="1" Color="LightGray" />
 
-                        <Image Source="{Binding Image}" 
+            <CollectionView x:Name="PuzzleBoard"
+                            ItemsSource="{Binding PuzzlePieces}"
+                            SelectionMode="None"
+                            HorizontalOptions="Center"
+                            VerticalOptions="CenterAndExpand">
+
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout Orientation="Vertical" 
+                                     Span="{Binding BoardSize}" 
+                                     HorizontalItemSpacing="1"
+                                     VerticalItemSpacing="1"/>
+                </CollectionView.ItemsLayout>
+
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Image Source="{Binding ImageSource}"  
                                Aspect="AspectFill"
-                               HeightRequest="100" 
-                               WidthRequest="100"
-                               Opacity="{Binding IsEmpty, Converter={StaticResource BoolToOpacityConverter}}">
-                            <Image.Triggers>
-                                <DataTrigger TargetType="Image" Binding="{Binding IsEmpty}" Value="True">
-                                    <Setter Property="Opacity" Value="0" />
-                                </DataTrigger>
-                            </Image.Triggers>
+                               HeightRequest="120"  
+                               WidthRequest="120"
+                               Margin="1">
+
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type local:GameViewModel}}, Path=PieceTappedCommand}"
+                                                      CommandParameter="{Binding .}"/>
+                            </Image.GestureRecognizers>
                         </Image>
-                    </Grid>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+            <BoxView HeightRequest="1" Color="LightGray" />
+
+            <Grid ColumnDefinitions="*,*" ColumnSpacing="10" Padding="0, 10, 0, 0">
+
+                <Button Text="Indítás" 
+                        Command="{Binding StartGameCommand}" 
+                        Grid.Column="0" />
+
+                <Button Text="Eredeti kép" 
+                        Command="{Binding ShowOriginalImageCommand}" 
+                        Grid.Column="1" />
+            </Grid>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
