--- a/QQWRFO_Mobilprog_Feleves/MainPage.xaml
+++ b/QQWRFO_Mobilprog_Feleves/MainPage.xaml
@@ -35,7 +35,7 @@
 
                 <Button Text="Regisztráció" 
                         Command="{Binding RegisterCommand}"
-                        BackgroundColor="DarkGray"
+                        BackgroundColor="Blue"
                         Grid.Column="1"/>
             </Grid>
         </VerticalStackLayout>
