--- a/QQWRFO_Mobilprog_Feleves/RegisterPage.xaml
+++ b/QQWRFO_Mobilprog_Feleves/RegisterPage.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QQWRFO_Mobilprog_Feleves.RegisterPage"
+             xmlns:local="clr-namespace:QQWRFO_Mobilprog_Feleves"
              Title="RegisterPage">
+    <ContentPage.BindingContext>
+        <local:RegisterViewModel />
+    </ContentPage.BindingContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -21,8 +25,8 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button Text="Register" Grid.Column="0"/>
-            <Button Text="Back to Login" Grid.Column="1"/>
+            <Button Text="Register" Grid.Column="0" Command="{Binding RegisterCommand}"/>
+            <Button Text="Back to Login" Grid.Column="1" Command="{Binding UnregisterCommand}"/>
         </Grid>
     </Grid>
 </ContentPage>
